# pywspix

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: index.html  pywspix.html  search.js
docs/pywspix/: consulta.html  file.html  gera.html  headers.html  lista.html  webhook.html
src/pywspix/: consulta.py  consultar.py  file.py  gera.py  gerar.py  headers.py  lista.py  main.py  schemas.py  webhook.py
tests/: test_wspix_consulta.py  test_wspix_consultar.py  test_wspix_file.py  test_wspix_gera.py  test_wspix_gerar.py  test_wspix_headers.py  test_wspix_lista.py  test_wspix_webhook.py
