[project]
name = "pywspix"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo Schcneider",email = "schneider.fei@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "validate-docbr (>=1.11.1,<2.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pywspix", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
